<resources>
    <string name="app_name">SEE</string>

    <string name="welcome">welcome</string>
    <string name="model">model</string>
    <string name="year">year</string>
    <string name="search">search</string>
    <string name="support">support</string>
    <string name="stores_services">stores_services</string>
    <string name="comparison">comparison</string>
    <string name="area">area</string>
    <string name="dimensions">dimensions</string>
    <string name="power_system">power_system</string>
    <string name="engine_type">engine_type</string>
    <string name="displacement">displacement</string>
    <string name="cooling_system">cooling_system</string>
    <string name="air">air</string>
    <string name="fuel_system">fuel_system</string>
    <string name="front_break">front_break</string>
    <string name="fuel_capacity">fuel_capacity</string>
    <string name="dry_weight_kg">dry_weight_kg</string>
    <string name="_1870_x_695_x_1150">_1870_x_695_x_1150</string>
    <string name="_1320">_1320</string>
    <string name="Transmission">Transmission</string>
    <string name="front_suspension">front_suspension</string>
    <string name="rear_suspension">rear_suspension</string>
    <string name="l_w_h_mm">l_w_h_mm</string>
    <string name="_120_70_12">_120_70_12</string>
    <string name="rear_tier">rear_tier</string>
    <string name="_110_70_12">_110_70_12</string>
    <string name="rear_break">rear_break</string>
    <string name="telescopic_fork">telescopic_fork</string>
    <string name="drum_130mm">drum_130mm</string>
    <string name="wheelbase_mm">wheelbase_mm</string>
    <string name="le_21_430">le_21_430</string>
    <string name="_4_stroke_forced_air_cooled">_4_stroke_forced_air_cooled</string>
    <string name="unit_swing">unit_swing</string>
    <string name="scooters">scooters</string>
    <string name="disk_190mm">disk_190mm</string>
    <string name="disk_226_mm">disk_226_mm</string>
    <string name="single_cylinder">single_cylinder</string>
    <string name="top_speed_km_hr">top_speed_km_hr</string>
    <string name="disk_260_mm">disk_260_mm</string>
    <string name="disk_240_mm">disk_240_mm</string>
    <string name="disc_226_mm">disc_226_mm</string>
    <string name="drum_130_mm">drum_130_mm</string>
    <string name="name">Name</string>
    <string name="web">Web</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="call">Call</string>
    <string name="address">Address</string>
    <string name="_196_gisr_elsuez_st_lamar_tower_nine_front_of_el_farokia_towers_cairo_egypt">196_Gisr_ElSuez st lamar tower Nine front of el farokia towers cairo,egypt</string>
</resources>
